--- a/css/style.css
+++ b/css/style.css
@@ -43,7 +43,17 @@ label {
 }
 
 input,select {
-    border: 2px solid #b91450;
+    border: 1px solid #b91450;
     padding: .3125rem;
     border-radius: .3125rem;
+}
+
+button{
+    margin: 0 1.25rem;
+    padding: .3125rem;
+    border-radius: .3125rem;
+    border: 1px solid black;
+    color: #b91450;
+    font-size: 15px;
+    font-weight: bold;
 }
