--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,15 @@
     margin: 0;
 }
 
+body{
+    background-color: #b91450;
+}
+
+h1,h2{
+    color: white;
+    text-align: center;
+    text-transform: uppercase;
+}
 /* COMMON */
 .container{
     width: 50rem;
